--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-body {
-    background-color: #0d47a1;
-<h1>
-	color: white;
-Samy is my favorite. She's pretty and HOT!!
-</h1>
-}
+<HEAD>
+<style>
+	body {background-color: #0d47a1;
+h1 {color:white;
+	margin left: 40px;}
+
+</style>
+</HEAD>
+
+<h1> Roman Y. Kolyvanov </h1>
