--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <HEAD>
 <style>
 	body {background-color: #0d47a1;
-h1 {color:white;
-	margin left: 40px;}
 
 </style>
 </HEAD>
 
-<h1> Roman Y. Kolyvanov </h1>
+<!DOCTYPE html>
+<html>
+<body>
+
+<body style="text-align:center;">
+
+<div style="position:relative; top:100px;">
+
+<h1 style="color:white;font-size:40px;font-family:Verdana">Welcome!</h1>
+
+<h2 style="color:white;font-size:30px;font-family:Verdana">This site is currently under construction.</h2>
+
+</div>
+</body>
+</html>
+
