--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 <h2 style="color:white;font-size:30px;font-family:Verdana">This site is currently under construction.</h2>
 
+<img src="me.png" alt="me">
+
 </div>
 </body>
 </html>
