Replaced main header image.

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         <!-- Start Main content -->
         <main class="coda-main-content">
             <!-- Start Header -->
-            <header id="coda-about" class="coda-header" style="background-image: url(img/demo-img.jpg)">
+            <header id="coda-about" class="coda-header" style="background-image: url(img/me.png)">
                 <!-- header background image -->
-                <img class="coda-background-img" src="img/demo-img.jpg" alt="header image">
+                <img class="coda-background-img" src="img/me.png" alt="header image" style="transform: scaleX(-1);">
                 <!-- end header background image -->
                 <div class="coda-top-panel">
                     <div class="container">
@@ -440,7 +440,7 @@
                             <!-- skill bar -->
                             <div class="coda-skill-bar" data-percent="90">
                                 <div class="coda-skill-bar-title">html</div>
-                                <div class="coda-skill-bar-percent"><span class="coda-skill-count">90</span>%</div>
+                                <div class="coda-skill-bar-percent"><span class="coda-skill-count">15</span>%</div>
                                 <div class="coda-skill-bar-bar"></div>
                             </div>
                             <!-- end skill bar -->
