--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <meta charset="utf-8">
 
-        <title>coda | CV card</title>
+        <title>Roman Koly</title>
         <meta name="author" content="">
         <meta name="description" content="">
         <meta name="keywords" content="">
@@ -98,17 +98,16 @@
         <!-- Start Main content -->
         <main class="coda-main-content">
             <!-- Start Header -->
-            <header id="coda-about" class="coda-header" style="background-image: url(img/me.png)">
+            <header id="coda-about" class="coda-header" style="background-image: url(img/me2.png);" >
                 <!-- header background image -->
-                <img class="coda-background-img" src="img/me.png" alt="header image" style="transform: scaleX(-1);">
-                <!-- end header background image -->
+                <img class="coda-background-img" src="img/me2.png" alt="header image">
                 <div class="coda-top-panel">
                     <div class="container">
                         <div class="row align-items-center justify-content-between">
                             <!-- logotype -->
                             <div class="col-auto">
                                 <div class="coda-logo">
-                                    <p class="text-cursor">coda</p>
+                                    <p class="text-cursor">Welcome!</p>
                                 </div>
                             </div>
                             <!-- end logotype -->
@@ -132,10 +131,10 @@
                         <div class="row align-items-center vh100">
                             <div class="col-md-6 col-10">
                                 <!-- profession -->
-                                <p class="coda-profession">web developer</p>
+                                <p class="coda-profession">Product Manager</p>
                                 <!-- end profession -->
                                 <!-- first name, last Name -->
-                                <h1 class="coda-name">Andrew Owens</h1>
+                                <h1 class="coda-name">Roman Y. Kolyvanov</h1>
                                 <!-- end first name, last Name -->
                                 <!-- "About me" button -->
                                 <a href="#about" class="coda-underscore coda-pop-up-btn">learn more about me<i class="coda-left-arrow-ico"></i></a>
