Took out the "Y." in my name

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <p class="coda-profession">Product Manager</p>
                                 <!-- end profession -->
                                 <!-- first name, last Name -->
-                                <h1 class="coda-name">Roman Y. Kolyvanov</h1>
+                                <h1 class="coda-name">Roman Kolyvanov</h1>
                                 <!-- end first name, last Name -->
                                 <!-- "About me" button -->
                                 <a href="#about" class="coda-underscore coda-pop-up-btn">learn more about me<i class="coda-left-arrow-ico"></i></a>
