Changed several copy elements to make site unique to me.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                         <a href="#coda-skills" class="coda-underscore coda-scroll-to-btn">Skills</a>
                                     </li>
                                     <li class="coda-menu-item">
-                                        <a href="#coda-contacts" class="coda-underscore coda-scroll-to-btn">Contacts</a>
+                                        <a href="#coda-contacts" class="coda-underscore coda-scroll-to-btn">Contact</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -131,7 +131,7 @@
                         <div class="row align-items-center vh100">
                             <div class="col-md-6 col-10">
                                 <!-- profession -->
-                                <p class="coda-profession">Product Manager</p>
+                                <p class="coda-profession">Product Development & Ideation</p>
                                 <!-- end profession -->
                                 <!-- first name, last Name -->
                                 <h1 class="coda-name">Roman Kolyvanov</h1>
@@ -538,8 +538,8 @@
                     <div class="row">
                         <!-- section name -->
                         <div class="col-md-6 col-12">
-                            <p class="coda-description">get in touch</p>
-                            <h2>Contacts</h2>
+                            <!-- <p class="coda-description">get in touch</p> -->
+                            <h2>contact</h2>
                         </div>
                         <!-- end section name -->
                     </div>
@@ -558,7 +558,7 @@
                                 <!-- contact item -->
                                 <div class="coda-contact-item">
                                     <dt class="coda-contact-name">email:</dt>
-                                    <dd class="coda-contact-data"><a href="mailto:coda@email.com" class="coda-contact-link coda-underscore">coda@email.com</a></dd>
+                                    <dd class="coda-contact-data"><a href="mailto:roman@kolyvanov.com" class="coda-contact-link coda-underscore">roman@kolyvanov.com</a></dd>
                                 </div>
                                 <!-- end contact item -->
                                 <!-- contact item -->
@@ -588,7 +588,7 @@
                                     <label for="coda-message" class="coda-label">message</label>
                                     <span class="coda-bottom-border"></span>
                                 </div>
-                                <button class="coda-underscore coda-form-btn" type="submit">send me message<i class="coda-left-arrow-ico"></i></button>
+                                <button class="coda-underscore coda-form-btn" type="submit">send me a message<i class="coda-left-arrow-ico"></i></button>
                             </form>
                         </div>
                         <!-- end contact form -->
@@ -603,10 +603,10 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-md-6 col-12">
-                            <p class="coda-footer-copyright">Copyright &copy; 2018 Coda</p>
+                            <p class="coda-footer-copyright">Copyright &copy; 2018</p>
                         </div>
                         <div class="col-md-6 col-12">
-                            <h4 class="coda-footer-info">Andrew Owens</h4>
+                            <h4 class="coda-footer-info">Roman Kolyvanov</h4>
                         </div>
                     </div>
                 </div>
