Made several changes through out the site, put in image in about me page as well as first draft of description.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                                 <ul>
                                     <li class="coda-menu-item">
                                         <a href="#coda-about" class="coda-underscore coda-scroll-to-btn">About</a>
+
+                                       <!-- <a href="#about" class="coda-underscore coda-pop-up-btn">learn more about me<i class="coda-left-arrow-ico"> -->
+
                                     </li>
                                     <li class="coda-menu-item">
                                         <a href="#coda-portfolio" class="coda-underscore coda-scroll-to-btn">Portfolio</a>
@@ -304,32 +307,16 @@
                         <!-- experience filter navigation -->
                         <div class="col-md-10 col-12">
                             <ul class="coda-experience-filter-nav">
-                                <li class="coda-filter-nav-item coda-underscore">education</li>
                                 <li class="coda-filter-nav-item coda-underscore">work</li>
+                                <li class="coda-filter-nav-item coda-underscore">education</li>
                             </ul>
                         </div>
                         <!-- end experience filter navigation -->
                     </div>
                     <div class="row justify-content-between">
                         <div class="col-md-5 col-12 coda-experience-timeline-content">
-                            <!-- experience timeline for education -->
-                            <div class="coda-experience-timeline">
-                                <div class="coda-timeline-label">timeline</div>
-                                <!-- experience timeline caption -->
-                                <div class="coda-experience-timeline-caption">
-                                    <p class="coda-time-interval">2004 - 2007</p>
-                                    <h4 class="coda-underscore">College</h4>
-                                </div>
-                                <!-- end experience timeline caption -->
-                                <!-- experience timeline caption -->
-                                <div class="coda-experience-timeline-caption">
-                                    <p class="coda-time-interval">1995 - 2004</p>
-                                    <h4 class="coda-underscore">School</h4>
-                                </div>
-                                <!-- end experience timeline caption -->
-                            </div>
-                            <!-- end experience timeline for education -->
-                            <!-- experience timeline for work -->
+
+                             <!-- experience timeline for work -->
                             <div class="coda-experience-timeline">
                                 <div class="coda-timeline-label">timeline</div>
                                 <!-- experience timeline caption -->
@@ -352,34 +339,30 @@
                                 <!-- end experience timeline caption -->
                             </div>
                             <!-- end experience timeline for work -->
+
+                            <!-- experience timeline for education -->
+                            <div class="coda-experience-timeline">
+                                <div class="coda-timeline-label">timeline</div>
+                                <!-- experience timeline caption -->
+                                <div class="coda-experience-timeline-caption">
+                                    <p class="coda-time-interval">2004 - 2007</p>
+                                    <h4 class="coda-underscore">College</h4>
+                                </div>
+                                <!-- end experience timeline caption -->
+                                <!-- experience timeline caption -->
+                                <div class="coda-experience-timeline-caption">
+                                    <p class="coda-time-interval">1995 - 2004</p>
+                                    <h4 class="coda-underscore">School</h4>
+                                </div>
+                                <!-- end experience timeline caption -->
+                            </div>
+                            <!-- end experience timeline for education -->
+                           
                         </div>
                         <!-- end experience timeline -->
                         <!-- experience description -->
                         <div class="col-md-6 col-lg-5 col-12 coda-experience-content">
-                            <!-- experience description item for education -->
-                            <div class="coda-experience-description-item">
-                                <!-- experience description article -->
-                                <article class="coda-experience-description">
-                                    <header class="coda-experience-article-header">
-                                        <p class="coda-time-interval">2004 - 2007</p>
-                                        <h3>College</h3>
-                                    </header>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aut autem, cupiditate dolorum ea et, exercitationem harum, impedit ipsa iusto quaerat suscipit unde voluptas. Debitis deserunt dolorum error labore sapiente.</p>
-                                    <p>Nesciunt perspiciatis quas quasi quis rem repudiandae saepe! Accusamus aperiam delectus ea eius eos facilis ipsam itaque maiores molestiae molestias natus necessitatibus omnis placeat provident, quas quasi quisquam soluta velit voluptate voluptatem. Accusantium consectetur debitis nam nemo perspiciatis.</p>
-                                </article>
-                                <!-- end experience description article -->
-                                <!-- experience description article -->
-                                <article class="coda-experience-description">
-                                    <header class="coda-experience-article-header">
-                                        <p class="coda-time-interval">1995 - 2004</p>
-                                        <h3>School</h3>
-                                    </header>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque cupiditate eaque id iusto minima mollitia, quos!</p>
-                                    <p>A accusantium aliquam, blanditiis corporis dolore eos ipsam iusto perferendis, praesentium quisquam quos, tempore totam ullam veritatis voluptas.</p>
-                                </article>
-                                <!-- end experience description article -->
-                            </div>
-                            <!-- end experience description item for education -->
+                            
                             <!-- experience description item for work -->
                             <div class="coda-experience-description-item">
                                 <!-- experience description article -->
@@ -413,6 +396,30 @@
                                 </article>
                                 <!-- end experience description article -->
                             </div>
+                            <!-- experience description item for education -->
+                            <div class="coda-experience-description-item">
+                                <!-- experience description article -->
+                                <article class="coda-experience-description">
+                                    <header class="coda-experience-article-header">
+                                        <p class="coda-time-interval">2004 - 2007</p>
+                                        <h3>College</h3>
+                                    </header>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aut autem, cupiditate dolorum ea et, exercitationem harum, impedit ipsa iusto quaerat suscipit unde voluptas. Debitis deserunt dolorum error labore sapiente.</p>
+                                    <p>Nesciunt perspiciatis quas quasi quis rem repudiandae saepe! Accusamus aperiam delectus ea eius eos facilis ipsam itaque maiores molestiae molestias natus necessitatibus omnis placeat provident, quas quasi quisquam soluta velit voluptate voluptatem. Accusantium consectetur debitis nam nemo perspiciatis.</p>
+                                </article>
+                                <!-- end experience description article -->
+                                <!-- experience description article -->
+                                <article class="coda-experience-description">
+                                    <header class="coda-experience-article-header">
+                                        <p class="coda-time-interval">1995 - 2004</p>
+                                        <h3>School</h3>
+                                    </header>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque cupiditate eaque id iusto minima mollitia, quos!</p>
+                                    <p>A accusantium aliquam, blanditiis corporis dolore eos ipsam iusto perferendis, praesentium quisquam quos, tempore totam ullam veritatis voluptas.</p>
+                                </article>
+                                <!-- end experience description article -->
+                            </div>
+                            <!-- end experience description item for education -->
                         </div>
                         <!-- end experience description for work -->
                     </div>
@@ -539,7 +546,7 @@
                         <!-- section name -->
                         <div class="col-md-6 col-12">
                             <!-- <p class="coda-description">get in touch</p> -->
-                            <h2>contact</h2>
+                            <h2>Contact</h2>
                         </div>
                         <!-- end section name -->
                     </div>
@@ -649,7 +656,7 @@
                     <div class="row justify-content-between">
                         <div class="col-md-6 col-lg-5 col-12 order-md-first order-last">
                             <div class="coda-sticky">
-                                <img class="coda-img-responsive" src="img/demo-img.jpg" alt="text">
+                                <img class="coda-img-responsive" src="img/samyandi.jpg" alt="samyandi">
                             </div>
                         </div>
                         <div class="col-md-5 col-12 order-md-last order-first">
@@ -657,22 +664,22 @@
                                 <header class="coda-pop-up-header">
                                     <h3>About me</h3>
                                 </header>
-                                <p>Phasellus tortor eros, vehicula nec mollis vitae, non orci. Nullam ornare diam quis posuere gravida.</p>
-                                <p>Etiam ante arcu, iaculis ac nibh quis, sollicitudin fringilla turpis. Duis tristique lorem sed mi lacinia laoreet. Nullam hendrerit tortor at augue dignissim tempor. Morbi porta neque vel libero volutpat luctus. In ante metus, lacinia convallis congue vitae, lobortis in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-                                <p>Integer viverra ligula lacus, eget egestas erat elementum vel. Sed quis dui malesuada, venenatis nibh quis, molestie lorem. Mauris tristique, ipsum eu semper volutpat, lectus odio tempus massa, in pharetra orci orci et diam.</p>
+                                <p>I was born in Russia, but grew up in Southeast Portland, Oregon.</p>
+                                <p>I have worked in product development/management over the last few years. I love using technology to solve real problems both in the workplace and at home. Check out my website below for examples of my work! </p>
+                                <p>My main areas of expertise and skill are Product Ideation & Visioning.</p>
                                 <footer class="coda-pop-up-footer">
                                     <dl class="coda-description-container">
                                         <div class="coda-description-item">
-                                            <dt class="coda-description-name">date fo birth:</dt>
-                                            <dd class="coda-description-data">27 july 1987</dd>
+                                            <dt class="coda-description-name">date of birth:</dt>
+                                            <dd class="coda-description-data">11 october 1987</dd>
                                         </div>
                                         <div class="coda-description-item">
                                             <dt class="coda-description-name">profession:</dt>
-                                            <dd class="coda-description-data">web developer</dd>
+                                            <dd class="coda-description-data">Digital Product Development</dd>
                                         </div>
                                         <div class="coda-description-item">
                                             <dt class="coda-description-name">languages spoken:</dt>
-                                            <dd class="coda-description-data">english, german</dd>
+                                            <dd class="coda-description-data">english, russian</dd>
                                         </div>
                                     </dl>
                                 </footer>
