Several more changes including adding photos to portfolio section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <meta charset="utf-8">
 
-        <title>Roman Koly</title>
+        <title>Roman Kolyvanov</title>
         <meta name="author" content="">
         <meta name="description" content="">
         <meta name="keywords" content="">
@@ -101,9 +101,9 @@
         <!-- Start Main content -->
         <main class="coda-main-content">
             <!-- Start Header -->
-            <header id="coda-about" class="coda-header" style="background-image: url(img/me2.png);" >
+            <header id="coda-about" class="coda-header" style="background-image: url(img/me7.jpg);" >
                 <!-- header background image -->
-                <img class="coda-background-img" src="img/me2.png" alt="header image">
+                <img class="coda-background-img" src="img/me7.jpg" alt="header image">
                 <div class="coda-top-panel">
                     <div class="container">
                         <div class="row align-items-center justify-content-between">
@@ -179,10 +179,10 @@
                         <!-- portfolio item, article -->
                         <article class="col-lg-6 col-12 filtr-item coda-filter-item" data-category="1" data-sort="value">
                             <div class="coda-portfolio-item">
-                                <img class="coda-img" src="img/demo-img.jpg" alt="sample">
+                                <img class="coda-img" src="img/rytsarlogo.png" alt="rytsar">
                                 <div class="coda-portfolio-item-content">
                                     <header class="coda-portfolio-item-header">
-                                        <h3><a href="#travel" class="coda-underscore coda-pop-up-btn">Travel agency</a></h3>
+                                        <h3><a href="#travel" class="coda-underscore coda-pop-up-btn">Rytsar Web Application</a></h3>
                                     </header>
                                 </div>
                             </div>
@@ -191,10 +191,10 @@
                         <!-- portfolio item, article -->
                         <article class="col-lg-6 col-12 filtr-item coda-filter-item" data-category="1" data-sort="value">
                             <div class="coda-portfolio-item">
-                                <img class="coda-img" src="img/demo-img.jpg" alt="sample">
+                                <img class="coda-img" src="img/watchtower.jpg" alt="sample">
                                 <div class="coda-portfolio-item-content">
                                     <header class="coda-portfolio-item-header">
-                                        <h3><a href="#expedition" class="coda-underscore coda-pop-up-btn">Research expedition</a></h3>
+                                        <h3><a href="#expedition" class="coda-underscore coda-pop-up-btn">Payroll Leave Solution</a></h3>
                                     </header>
                                 </div>
                             </div>
@@ -321,20 +321,20 @@
                                 <div class="coda-timeline-label">timeline</div>
                                 <!-- experience timeline caption -->
                                 <div class="coda-experience-timeline-caption">
-                                    <p class="coda-time-interval">2014 - present</p>
+                                    <p class="coda-time-interval">2017 - present</p>
                                     <h4 class="coda-underscore">Freelance</h4>
                                 </div>
                                 <!-- end experience timeline caption -->
                                 <!-- experience timeline caption -->
                                 <div class="coda-experience-timeline-caption">
-                                    <p class="coda-time-interval">2010 - 2014</p>
-                                    <h4 class="coda-underscore">Studio awesome</h4>
+                                    <p class="coda-time-interval">2017 - 2018</p>
+                                    <h4 class="coda-underscore">Product Manager</h4>
                                 </div>
                                 <!-- end experience timeline caption -->
                                 <!-- experience timeline caption -->
                                 <div class="coda-experience-timeline-caption">
-                                    <p class="coda-time-interval">2007 - 2010</p>
-                                    <h4 class="coda-underscore">Some work</h4>
+                                    <p class="coda-time-interval">2016 - 2018</p>
+                                    <h4 class="coda-underscore">Efficiency Analyst</h4>
                                 </div>
                                 <!-- end experience timeline caption -->
                             </div>
@@ -345,13 +345,13 @@
                                 <div class="coda-timeline-label">timeline</div>
                                 <!-- experience timeline caption -->
                                 <div class="coda-experience-timeline-caption">
-                                    <p class="coda-time-interval">2004 - 2007</p>
+                                    <p class="coda-time-interval">2006 - 2010</p>
                                     <h4 class="coda-underscore">College</h4>
                                 </div>
                                 <!-- end experience timeline caption -->
                                 <!-- experience timeline caption -->
                                 <div class="coda-experience-timeline-caption">
-                                    <p class="coda-time-interval">1995 - 2004</p>
+                                    <p class="coda-time-interval">1993 - 2006</p>
                                     <h4 class="coda-underscore">School</h4>
                                 </div>
                                 <!-- end experience timeline caption -->
@@ -368,7 +368,7 @@
                                 <!-- experience description article -->
                                 <article class="coda-experience-description">
                                     <header class="coda-experience-article-header">
-                                        <p class="coda-time-interval">2014 - present</p>
+                                        <p class="coda-time-interval">2016 - present</p>
                                         <h3>Freelance</h3>
                                     </header>
                                     <p>At commodi, consequatur consequuntur corporis cumque deserunt distinctio doloribus explicabo facilis in ipsam ipsum laudantium maxime nihil quasi quibusdam sapiente sint? Explicabo fuga incidunt laboriosam molestiae quo reiciendis soluta, temporibus ullam voluptates!</p>
@@ -665,7 +665,7 @@
                                     <h3>About me</h3>
                                 </header>
                                 <p>I was born in Russia, but grew up in Southeast Portland, Oregon.</p>
-                                <p>I have worked in product development/management over the last few years. I love using technology to solve real problems both in the workplace and at home. Check out my website below for examples of my work! </p>
+                                <p>I have worked in product development/management over the last few years. I love using technology to solve real problems both in the workplace and at home.</p>
                                 <p>My main areas of expertise and skill are Product Ideation & Visioning.</p>
                                 <footer class="coda-pop-up-footer">
                                     <dl class="coda-description-container">
