Photo not working for some reason, trying again.

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <!-- portfolio item, article -->
                         <article class="col-lg-6 col-12 filtr-item coda-filter-item" data-category="1" data-sort="value">
                             <div class="coda-portfolio-item">
-                                <img class="coda-img" src="img/rytsarlogo.png" alt="rytsar">
+                                <img class="coda-img" src="img/rytsarlogo2.png" alt="rytsar">
                                 <div class="coda-portfolio-item-content">
                                     <header class="coda-portfolio-item-header">
                                         <h3><a href="#travel" class="coda-underscore coda-pop-up-btn">Rytsar Web Application</a></h3>
