--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
         <!-- Start Main content -->
         <main class="coda-main-content">
             <!-- Start Header -->
-            <header id="coda-about" class="coda-header" style="background-image: url(img/me7.jpg);" >
+            <header id="coda-about" class="coda-header" style="background-image: url(img/roma3b.jpg);" >
                 <!-- header background image -->
-                <img class="coda-background-img" src="img/me7.jpg" alt="header image">
+                <img class="coda-background-img" src="img/roma3b.jpg" alt="header image">
                 <div class="coda-top-panel">
                     <div class="container">
                         <div class="row align-items-center justify-content-between">
