added photos for rytsar section, and facebook link

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 
                                        <!-- <a href="#about" class="coda-underscore coda-pop-up-btn">learn more about me<i class="coda-left-arrow-ico"> -->
 
+                                        <!-- <a href="#coda-about" class="coda-underscore coda-scroll-to-btn">About</a> -->
+
                                     </li>
                                     <li class="coda-menu-item">
                                         <a href="#coda-portfolio" class="coda-underscore coda-scroll-to-btn">Portfolio</a>
@@ -167,9 +169,9 @@
                         <div class="col-md-10 col-12">
                             <ul class="coda-filter-nav">
                                 <li class="coda-filter-nav-item coda-underscore" data-filter="all">all</li>
-                                <li class="coda-filter-nav-item coda-underscore" data-filter="1">web design</li>
-                                <li class="coda-filter-nav-item coda-underscore" data-filter="2">ui design</li>
-                                <li class="coda-filter-nav-item coda-underscore" data-filter="3">illustration</li>
+                                <li class="coda-filter-nav-item coda-underscore" data-filter="1">Product Development</li>
+                                <li class="coda-filter-nav-item coda-underscore" data-filter="2">Design</li>
+                                <li class="coda-filter-nav-item coda-underscore" data-filter="3">Business Process Analysis</li>
                             </ul>
                         </div>
                         <!-- end portfolio filter navigation -->
@@ -559,7 +561,7 @@
                                 <!-- contact item -->
                                 <div class="coda-contact-item">
                                     <dt class="coda-contact-name">phone:</dt>
-                                    <dd class="coda-contact-data"><a href="tel:+544&nbsp;4779&nbsp;225" class="coda-contact-link coda-underscore">+544 4779 225</a></dd>
+                                    <dd class="coda-contact-data"><a href="tel:+544&nbsp;4779&nbsp;225" class="coda-contact-link coda-underscore">5zero3.7two9.5eight6six</a></dd>
                                 </div>
                                 <!-- end contact item -->
                                 <!-- contact item -->
@@ -570,8 +572,8 @@
                                 <!-- end contact item -->
                                 <!-- contact item -->
                                 <div class="coda-contact-item">
-                                    <dt class="coda-contact-name">follow me on</dt>
-                                    <dd class="coda-contact-data"><a href="https://www.facebook.com" class="coda-contact-link coda-underscore">facebook</a><a href="https://twitter.com" class="coda-contact-link coda-underscore">twitter</a><a href="https://www.instagram.com" class="coda-contact-link coda-underscore">instagram</a></dd>
+                                    <dt class="coda-contact-name">follow me on:</dt>
+                                    <dd class="coda-contact-data"><a href="https://www.facebook.com/roman.kolyvanov" class="coda-contact-link coda-underscore">facebook</a><a href="https://twitter.com" class="coda-contact-link coda-underscore">twitter</a><a href="https://www.instagram.com" class="coda-contact-link coda-underscore">instagram</a></dd>
                                 </div>
                                 <!-- end contact item -->
                             </dl>
@@ -613,7 +615,7 @@
                             <p class="coda-footer-copyright">Copyright &copy; 2018</p>
                         </div>
                         <div class="col-md-6 col-12">
-                            <h4 class="coda-footer-info">Roman Kolyvanov</h4>
+                            <h4 class="coda-footer-info">roman@kolyvanov.com</h4>
                         </div>
                     </div>
                 </div>
@@ -720,21 +722,20 @@
                         <div class="col-md-5 col-12">
                             <div class="coda-sticky">
                                 <header class="coda-pop-up-header">
-                                    <h3>Travel agency</h3>
+                                    <h3>Rytsar.io</h3>
                                 </header>
-                                <p>Phasellus tortor eros, vehicula nec mollis vitae, non orci. Nullam ornare diam quis posuere gravida.</p>
-                                <p>Integer viverra ligula lacus, eget egestas erat elementum vel. Sed quis dui malesuada, venenatis nibh quis, molestie lorem. Mauris tristique, ipsum eu semper volutpat, lectus odio tempus massa, in pharetra orci orci et diam.</p>
-                                <p>Ab at cumque ducimus earum, illum impedit iure molestiae numquam perspiciatis placeat provident quam, quo recusandae reiciendis rerum soluta ut. Aliquam deleniti ex illum incidunt itaque maiores odio.</p>
+                                <p>Current partner in business web application startup called Rytsar, a CRM, Project Management, and Time Tracking Web App.</p>
+                                <p>I've met with potential clients to hear their story and to build lists of requirements, written and edited all technical copy, helped with UI/UX design, onboarding, scalability, mobile responsiveness, and developed user stories based on user research.</p>
                                 <footer class="coda-pop-up-footer">
                                     <dl class="coda-description-container">
                                         <div class="coda-description-item">
                                             <dt class="coda-description-name">categories:</dt>
-                                            <dd class="coda-description-data">web design</dd>
+                                            <dd class="coda-description-data">Product Development</dd>
                                         </div>
                                         <div class="coda-description-item">
                                             <dt class="coda-description-name">project by:</dt>
-                                            <dd class="coda-description-data">Andrew Owens</dd>
-                                        </div>
+                                            <dd class="coda-description-data">Vlad Dzhidzhiyeshvili & Roman Kolyvanov</dd>
+                                        <!-- </div>
                                         <div class="coda-description-item">
                                             <dt class="coda-description-name">client:</dt>
                                             <dd class="coda-description-data">USA Airlines</dd>
@@ -742,15 +743,15 @@
                                         <div class="coda-description-item">
                                             <dt class="coda-description-name">made in:</dt>
                                             <dd class="coda-description-data">may 2018</dd>
-                                        </div>
+                                        </div> -->
                                     </dl>
                                 </footer>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-5 col-12">
                             <div class="coda-sticky">
-                                <img class="coda-img-responsive" src="img/demo-img.jpg" alt="text">
-                                <img class="coda-img-responsive" src="img/demo-img.jpg" alt="text">
+                                <img class="coda-img-responsive" src="img/rytsarapp2.jpg" alt="rytsarapp2">
+                                <img class="coda-img-responsive" src="img/rytsarapp1.jpg" alt="rytsarapp1">
                             </div>
                         </div>
                     </div>
