troubleshooting rytsar photo issue

--- a/index.html
+++ b/index.html
@@ -750,8 +750,8 @@
                         </div>
                         <div class="col-md-6 col-lg-5 col-12">
                             <div class="coda-sticky">
-                                <img class="coda-img-responsive" src="img/rytsarapp2.jpg" alt="rytsarapp2">
-                                <img class="coda-img-responsive" src="img/rytsarapp1.jpg" alt="rytsarapp1">
+                                <img class="coda-img-responsive" src="img/rytsarweb.jpg" alt="rytsarweb">
+                                <img class="coda-img-responsive" src="img/rytsarapp.jpg" alt="rytsarapp">
                             </div>
                         </div>
                     </div>
